<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/refresh_log"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:text="@string/reps"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView22"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/reps_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_reps_for_exercise"
        android:layout_below="@+id/textView22"
        android:layout_alignStart="@+id/weight_tv" />

    <EditText
        android:id="@+id/weight_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/enter_weight_for_exercise"
        android:layout_below="@+id/reps_tv"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="32dp" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_below="@+id/reps_tv"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exercise"
        android:layout_below="@+id/weight_tv"
        android:layout_alignStart="@+id/weight" />

    <AutoCompleteTextView
        android:id="@+id/exercise_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_exercise_name"
        android:layout_below="@+id/weight_tv"
        android:layout_alignStart="@+id/weight_tv" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repetetion_unit"
        android:layout_below="@+id/exercise_tv"
        android:layout_alignStart="@+id/textView16" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView18"
        android:layout_below="@+id/textView18"
        android:layout_marginTop="21dp"
        android:text="@string/weight_unit" />

    <Spinner
        android:id="@+id/rep_unit_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_rep_unit"
        android:layout_below="@+id/exercise_tv"
        android:layout_alignStart="@+id/exercise_tv" />

    <Spinner
        android:id="@+id/weight_unit_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_weight_unit"
        android:layout_alignTop="@+id/textView19"
        android:layout_alignStart="@+id/rep_unit_sp" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="10sp"
        android:layout_below="@+id/weight_unit_sp"
        android:layout_alignEnd="@+id/exercise_tv" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/workout_log"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/reps_tv" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/log_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_toStartOf="@+id/textView19"
        android:layout_below="@+id/save_btn" />

    <Button
        android:id="@+id/muscles_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/muscles_trained"
        android:layout_below="@+id/weight_unit_sp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp" />

</RelativeLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
    </ScrollView>