<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_fitness_center_black_24dp"
            android:title="@string/equipment" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/exercise2"
            android:title="@string/exercises" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/muscles"
            android:title="@string/muscles" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/workout"
            android:title="@string/workout" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
