<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/images"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_info_title" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="41dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_info_title" />

    <TextView
        android:id="@+id/category_tv"
        android:layout_width="257dp"
        android:layout_height="17dp"
        android:layout_marginRight="34dp"
        android:text="TextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/equipment_text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/category"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equipment_text" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/descripton"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/category_tv"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/muscles_text"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/description_text" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="37dp"
        android:layout_marginTop="8dp"
        android:text="@string/muscles_info"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="18dp"
        android:layout_height="17dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="18dp"
        android:layout_height="17dp"
        android:layout_marginLeft="8dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="123dp"
        android:layout_height="22dp"
        android:text="@string/secondary_muscles"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.025"
        android:layout_marginRight="168dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_muscles"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:layout_marginRight="190dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/equipment_text"
        app:layout_constraintTop_toBottomOf="@+id/name_tv"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <ImageView
        android:id="@+id/svg_muscle"
        android:layout_width="99dp"
        android:layout_height="131dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="53dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginRight="31dp"
        android:layout_marginTop="8dp"
        android:maxLines="6"
        android:text="TextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_tv" />

    <TextView
        android:id="@+id/equipment_text"
        android:layout_width="250dp"
        android:layout_height="17dp"
        android:layout_marginRight="41dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="TextView"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/name_tv" />

    <ImageView
        android:id="@+id/svg_muscle_iv"
        android:layout_width="99dp"
        android:layout_height="131dp"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="53dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/secondary_iv"
        android:layout_width="99dp"
        android:layout_height="131dp"
        android:layout_marginBottom="64dp"
        android:layout_marginRight="61dp"

        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/seconday_muscle_iv"
        android:layout_width="99dp"
        android:layout_height="131dp"
        android:layout_marginBottom="64dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginRight="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/exercise_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exercise Info"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
    </ScrollView>